Fixing issue where footer social icons and search icons in nav were overlapping. Work on #371.

--- a/static/scss/_objects.scss
+++ b/static/scss/_objects.scss
@@ -148,6 +148,8 @@ img { @include resp-img; }
   margin-top: -1px; // offsets borders, correctly centering circle
   transform: translateY(-35px);
   @include trans(.2s);
+
+  .no-svg & { background-color: transparent; }
 }
 
 .icon--reg {
